fix: video button size on mobile

--- a/assets/styles/components/product-video.scss
+++ b/assets/styles/components/product-video.scss
@@ -20,6 +20,10 @@
   justify-content: center;
   align-items: center;
   z-index: 3;
+  @media (max-width: $br1) {
+    width: 40px;
+    height: 40px;
+  }
   svg {
     display: block;
     max-width: 100%;
